# timp-lab06

./: CMakeLists.txt  CPackConfig.cmake  DESCRIPTION
.github/: tag.yml
.github/workflows/: c-cpp.yml  tag.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPackConfig.cmake
solver_lib/: CMakeLists.txt  solver.cpp
